# uned_Sociophysics

./: .gitignore  README.md  pyproject.toml
Complex_Network/: aux_network.py  main_network.py
Opinion_Dynamics/: opinion_dyn_functions.py  threshold_support.py
Opinion_Dynamics_models/: aux_functions.py  axelrod_model.py  schelling_model.py  sznajd.py  sznajd_model.py  voter_in_small_world_network.py  voter_model.py
