[tool.poetry]
name = "uned-sociophysics"
version = "0.1.0"
description = ""
authors = ["cmnarrillos <cmorenonarrillos@gmail.com>"]
readme = "README.md"
packages = [{include = "uned_sociophysics"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

